# LexTableSort

./: AnyColumn.cpp  AnyColumn.h  CMakeLists.txt  CMakeSettings.json  ConsoleApplication2.sln  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  LexTableSort.sln  LexTableSort.vcxproj  LexTableSort.vcxproj.filters  LexicographicalSortTests.cpp  Performance.cpp  Performance.h  PerformanceTest.cpp  PerformanceTest.h  README.md  Table.cpp  Table.h  Tests.cpp  Tests.h  catch.hpp  doctest.h  main.cpp  pch.h  plot.py  plot_cols.py
